--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <title>WDE MONITOR</title>
-    <link rel="stylesheet" href="../css/style.css" media="all">
+    <link rel="stylesheet" href="/stylesheets/style.css" media="all">
    
 </head>
 
@@ -15,7 +15,7 @@
  
 <div class="container">
     <div class="header">
-        <img src="../images/safaricom-logo.png" alt="safaricom-logo" width="200" height="fit">
+        <img src="/images/safaricom-logo.png" alt="safaricom-logo" width="200" height="fit">
         <span class="brand-title">WDE-MONITOR</span>
         <span class="flex-expand"></span>
         <span class="brand-title">Welcome John Doe</span>
