--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,143 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+/* body {
+    font-family: 'Times New Roman', Times, serif;
+    color: rgb(23, 124, 40);
+    font-size: 18px;
+} */
+
+/* h1 {
+    font-size: 30px;
+    padding-top: 25px;
+} */
+
+
+/* .content {
+    background-color: rgba(199, 211, 198, 0.72);
+    height: 500px;
+    margin-left: 0%;
+    margin-right: 15%;
+    margin-top: 5px;
+    margin-bottom: 30px;
+    padding-top: 0px;
+    padding-bottom: 30px;
+    padding-left: 20px;
+    box-shadow: 10px 10px rgb(1, 10, 2);
+    border-radius: 0%;
+} */
+html {
+    height: 100%;
 }
 
-a {
-  color: #00B7FF;
+body {
+    min-height: 100%;
+}
+.container {
+    background: #f8f8fa;
+    /* height: 100%;
+    width: 100%; */
+}
+.header{
+    background: #ffffff;
+    position: sticky;
+    top: 0;
+    z-index: 10000;
+    box-shadow: 0 4px 16px 0 rgba(167, 175, 183, 0.33);
+    display: flex;
+}
+.brand-title{
+    /* /* padding: 10px; */
+    margin-top: 25px;
+    margin-left: 20px;
+    color: #999c9e;
+    font-size: 18px;
+    font-weight: normal;
+    vertical-align: middle;
+    /* line-height: 50px; */
+
+}
+
+.flex-expand {
+    flex: 1 1 auto;
+}
+.navbar-brand {
+    display:inline-block;
+    padding-top:.3125rem;
+    padding-bottom:.3125rem;
+    margin-right:1rem;
+    font-size:1.25rem;
+    line-height:inherit;
+    white-space:nowrap
+  }
+
+.main{
+    background: #ffffff;
+    height: 95%;
+    width: 95%;
+    padding: 20px;
+    margin: 30px;
+    border-radius: 4px;
+    box-shadow: 0 3px 6px 0 rgba(196, 200, 208, 0.4);
+}
+
+.user-input{
+
+
+}
+.user-input p {
+    font-style: italic;
+    font-weight: bold;
+    margin-left: 30px;
+
+}
+.myform {
+    margin-left: 30px;
+    
+}
+.user-profile{
+    padding: 10px;
+    margin: 20px;
+    box-shadow: 0 3px 6px 0 rgba(196, 200, 208, 0.4);
+}
+
+.profile-ek{
+    margin-top: 10px;
+    font-weight:bold;
+}
+.profile-name{
+    margin-top: 10px;
+    font-weight:bold;
+}
+.user-actions{
+    margin: 20px 0;
+}
+.user-results{
+    margin: 20px 0;
+    padding: 10px;
+    border: 1px solid #999c9e;
+    border-radius: 4px;
+    min-height: 200px;
+    text-align: center;
+}
+.output-title{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 20;
+    color: #999c9e;
+    text-align: center;
+    font-weight: bold;
+    text-transform: capitalize;
+    
+}
+.footer{
+    position: fixed;
+    background: #ffffff;
+    bottom: 0;
+    z-index: 10000;
+    text-align: center;
+    font-size: 20;
+    color: #999c9e;
+    text-align: center;
+    font-weight: bold;
+    line-height: 50px;
+    box-shadow: 0 4px 16px 0 rgba(167, 175, 183, 0.33);
+    width: 100%;
 }
